/**
// Erstelle dein Programm über Blockly und
// klicke auf 'Play', um es auszuführen!
*/

public class Player { 
    public Player(double startX, double startY, String farbe, String left, String right, String up, String down, Coin coin) {
    }

    public void onKeyDown(String key) {
    }

    public void act() {
    }



}